finished the task

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock-Paper-Scissors</title>
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
     </head>
     <body>
+        <button type="button" id='btn1'  value='rock'>Rock</button>
+        <button type="button" id='btn2' value='paper'>Paper</button>
+        <button type="button" id='btn3' value='scissors'>Scissors</button>
+        <p id="content"></p>
+        <div id="container"></div>
+
         
     </body>
     
-</html>
+</html>/
